--- a/InstaDirectMessage_ButDev/InstaDirectMessage_ButDev/Forms/MainForm.en.resx
+++ b/InstaDirectMessage_ButDev/InstaDirectMessage_ButDev/Forms/MainForm.en.resx
@@ -215,9 +215,6 @@
   <data name="ErrorsCount.HeaderText" xml:space="preserve">
     <value>Number of errors</value>
   </data>
-  <data name="contextMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>186, 136</value>
-  </data>
   <data name="toolStripMenuItemCopyLogin.Size" type="System.Drawing.Size, System.Drawing">
     <value>185, 22</value>
   </data>
@@ -254,6 +251,9 @@
   <data name="посмотретьЛогАккаунтаToolStripMenuItem.Text" xml:space="preserve">
     <value>View account log</value>
   </data>
+  <data name="contextMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
+    <value>186, 136</value>
+  </data>
   <data name="label13.Size" type="System.Drawing.Size, System.Drawing">
     <value>180, 13</value>
   </data>
@@ -287,9 +287,6 @@ from: "Hello!", "Hi!", "Hey!" etc.</value>
   <data name="buttonMailingSwitch.Text" xml:space="preserve">
     <value>     Direct mailing</value>
   </data>
-  <data name="panelAccounts.Location" type="System.Drawing.Point, System.Drawing">
-    <value>220, 661</value>
-  </data>
   <data name="buttonResetDataGrid.Text" xml:space="preserve">
     <value>Reset table</value>
   </data>
@@ -299,8 +296,8 @@ from: "Hello!", "Hi!", "Hey!" etc.</value>
   <data name="buttonLoadAccounts.Text" xml:space="preserve">
     <value>Add accounts</value>
   </data>
-  <data name="panelDirectMailing.Location" type="System.Drawing.Point, System.Drawing">
-    <value>363, 632</value>
+  <data name="panelAccounts.Location" type="System.Drawing.Point, System.Drawing">
+    <value>220, 661</value>
   </data>
   <data name="buttonSeeLog.Text" xml:space="preserve">
     <value>    Open log</value>
@@ -349,6 +346,9 @@ from: "Hello!", "Hi!", "Hey!" etc.</value>
   </data>
   <data name="buttonOpenAccountList_Mailing.Text" xml:space="preserve">
     <value>Open a list of accounts for a job</value>
+  </data>
+  <data name="panelDirectMailing.Location" type="System.Drawing.Point, System.Drawing">
+    <value>400, 145</value>
   </data>
   <data name="buttonAccountRecover.Text" xml:space="preserve">
     <value>            Recover accounts with SMS</value>
@@ -10763,12 +10763,6 @@ support</value>
     <value>Direct
 mailing</value>
   </data>
-  <data name="panelSettings.Location" type="System.Drawing.Point, System.Drawing">
-    <value>572, 102</value>
-  </data>
-  <data name="panelSettings.Size" type="System.Drawing.Size, System.Drawing">
-    <value>360, 255</value>
-  </data>
   <data name="buttonClearAutocomplete.Text" xml:space="preserve">
     <value>Clear autofill data</value>
   </data>
@@ -10814,6 +10808,12 @@ your account</value>
   </data>
   <data name="label16.Text" xml:space="preserve">
     <value>Lock timeout (seconds):</value>
+  </data>
+  <data name="panelSettings.Location" type="System.Drawing.Point, System.Drawing">
+    <value>572, 102</value>
+  </data>
+  <data name="panelSettings.Size" type="System.Drawing.Size, System.Drawing">
+    <value>360, 255</value>
   </data>
   <data name="toolStripActualizerUA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -10861,9 +10861,6 @@ your account</value>
   <data name="toolStripAccountChecker.Text" xml:space="preserve">
     <value>Accounts checker</value>
   </data>
-  <data name="panelPosting.Size" type="System.Drawing.Size, System.Drawing">
-    <value>164, 62</value>
-  </data>
   <data name="toolStripAvatarChanger.Size" type="System.Drawing.Size, System.Drawing">
     <value>101, 19</value>
   </data>
@@ -10881,6 +10878,18 @@ your account</value>
   </data>
   <data name="toolStripMassFollowing.Text" xml:space="preserve">
     <value>Massfollowing</value>
+  </data>
+  <data name="toolStripFollowersGreeting.Size" type="System.Drawing.Size, System.Drawing">
+    <value>142, 19</value>
+  </data>
+  <data name="toolStripFollowersGreeting.Text" xml:space="preserve">
+    <value>New followers greeting</value>
+  </data>
+  <data name="menuStripPosting.Size" type="System.Drawing.Size, System.Drawing">
+    <value>164, 80</value>
+  </data>
+  <data name="panelPosting.Size" type="System.Drawing.Size, System.Drawing">
+    <value>164, 82</value>
   </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
